--- a/src/app/messenger/messenger.component.scss
+++ b/src/app/messenger/messenger.component.scss
@@ -104,11 +104,6 @@ body {
       font-weight: bold;
       font-size: 16px;
     }
-    
-    .chat-num-messages {
-      color: $gray;
-    }
-    
     .fa-star {
       float: right;
       color: #D8DADF;
@@ -174,6 +169,9 @@ body {
   
   .chat-message {
     padding: 30px;
+    position : fixed;
+    bottom :0 ;
+    right :0;
     textarea {
       width: 100%;
       border: none;
