--- a/src/app/messenger/messenger.component.scss
+++ b/src/app/messenger/messenger.component.scss
@@ -166,9 +166,11 @@ body {
   
   .chat-message {
     padding: 30px;
-    position: fixed;
+    position: absolute;
     bottom :0 ;
-    right :0 ;
+    right : 20% ;
+    width : inherit;
+    
     textarea {
       width: 100%;
       border: none;
