--- a/src/app/messenger/messenger.component.scss
+++ b/src/app/messenger/messenger.component.scss
@@ -168,9 +168,9 @@ body {
     padding: 30px;
     position: absolute;
     bottom :0 ;
-    right : 20% ;
+    right : 0 ;
     width : inherit;
-    
+
     textarea {
       width: 100%;
       border: none;
