--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -10,3 +10,8 @@ input[type="file"] {
     padding: 6px 12px;
     cursor: pointer;
 }
+#messenger-pop-up {
+    position:  fixed;
+    bottom :0;
+    align-content: center;
+}
