--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -145,17 +145,12 @@
   </div>
   
 <!-- End Page Container -->
+<div id = "messenger-pop-up">
+  <app-messenger [currentUser] = "CurrentUser"></app-messenger>
+</div>
 </div>
 <br>
 
-<!-- Footer -->
-<footer class="w3-container w3-theme-d3 w3-padding-16">
-  <h5>Footer</h5>
-</footer>
-
-<footer class="w3-container w3-theme-d5">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-</footer>
 <script>
 // Accordion
 function myFunction(id) {
