--- a/src/app/messenger/messenger.component.scss
+++ b/src/app/messenger/messenger.component.scss
@@ -168,7 +168,6 @@ background: #EEE;
 }
 
 #search {
-background: #333 url("../images/search.png") -11px 0 no-repeat;
 height: 60px;
 width: 290px;
 position: absolute;
@@ -209,7 +208,7 @@ color: #fff;
 }
 
 .p1 #profile {
-background: url("../images/marvel.jpg") 0 0 no-repeat;
+background: url("https://image.freepik.com/free-vector/doodle-love-icon_1034-778.jpg") 0 0 no-repeat;
 }
 
 #profile .avatar {
@@ -359,7 +358,6 @@ outline: 0;
 }
 
 #sendmessage button {
-background: url("../images/send.png") 0 0 no-repeat;
 width: 30px;
 height: 30px;
 position: absolute;
