--- a/src/app/messenger/messenger.component.scss
+++ b/src/app/messenger/messenger.component.scss
@@ -29,10 +29,10 @@ img{max-width:100%;}
 
 .open-more{
   bottom:0px;
-  transition:2s;
+  transition: 1s;
 }
 .first-section{
-  background-color:#FD8468;
+  background-color:rgb(19, 16, 16);
 }
 .first-section p{
   color:#fff;
