--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
 </div>
-<div class = ".main-section">
+<div class = "main-section">
   <div class="container w3layouts agileits">
 
 		<div id="chatbox">
