--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -4,7 +4,7 @@
       <p>GreenAms Messenger</p>
     </div>
     <div class="col-md-4 col-sm-6 col-xs-6 right-first-section">
-      <a href="#"><i class="fa fa-minus" aria-hidden="true"></i></a>
+      <a href="#" (click) = "openChat()"><i class="fa fa-minus" aria-hidden="true"></i></a>
     </div>
   </div>
 </div>
