--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -145,10 +145,11 @@
   </div>
   
 <!-- End Page Container -->
-<div id = "messenger-pop-up">
-  <app-messenger [currentUser] = "CurrentUser"></app-messenger>
+  
 </div>
-</div>
+<footer>
+  <app-messenger [currentUser] = "CurrentUser" id = "messenger-pop-up"></app-messenger>
+</footer>
 <br>
 
 <script>
