--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -97,7 +97,7 @@
       </div>
       
     <!-- End Middle Column -->
-    <app-messenger [currentUser] = "CurrentUser" id = "messenger-pop-up"></app-messenger>
+    <app-messenger [currentUser] = "CurrentUser"></app-messenger>
     </div>
     
     <!-- Right Column -->
