--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -1,4 +1,4 @@
-<div class="container w3layouts agileits">
+<div class="container w3layouts agileits"  id = "#messenger-pop-up">
 
 		<div id="chatbox">
 
