--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -146,7 +146,24 @@
   </div>
   
 <!-- End Page Container -->
-<app-messenger [currentUser] = "CurrentUser"></app-messenger>
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <div class="modal-header">
+      <span class="close">&times;</span>
+      <h2>GREENAMS MESSENGER</h2>
+    </div>
+    <div class="modal-body">
+      <app-messenger [currentUser] = "CurrentUser"></app-messenger>
+    </div>
+    <div class="modal-footer">
+      <p>#greenams6520<p>
+    </div>
+  </div>
+
+</div>
+
 </div>
 <br>
 
