--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
   <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-theme-d2"  (click)="openNav()"><i class="fa fa-bars"></i></a>
   <a href="#" class="w3-bar-item w3-button w3-padding-large w3-theme-d4"><i class="fa fa-home w3-margin-right"></i>GROUP</a>
   <a class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Messages" (click) = "navigateChat()"><i class="fa fa-envelope"></i></a>
-  <div class="w3-dropdown-click w3-hide-small">
+  <div class="w3-dropdown-hover w3-hide-small">
     <button class="w3-button w3-padding-large" title="Notifications"><i class="fa fa-bell"></i><span class="w3-badge w3-right w3-small w3-green">3</span></button>     
     <div class="w3-dropdown-content w3-card-4 w3-bar-block" style="width:300px">
       <a href="#" class="w3-bar-item w3-button">One new friend request</a>
@@ -20,9 +20,9 @@
 
 <!-- Navbar on small screens -->
 <div class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium w3-large" #navDemo>
-  <a class="w3-bar-item w3-button w3-padding-large">GROUP</a>
-  <a class="w3-bar-item w3-button w3-padding-large" (click) = "navigateChat()"><i class="fa fa-envelope"></i> CHAT</a>
-  <a class="w3-bar-item w3-button w3-padding-large">SCHEDULE</a>
+  <a class="w3-bar-item w3-button w3-padding-large" style="position:fixed">GROUP</a>
+  <a class="w3-bar-item w3-button w3-padding-large"  style="position:fixed" (click) = "navigateChat()"><i class="fa fa-envelope"></i> CHAT</a>
+  <a class="w3-bar-item w3-button w3-padding-large"  style="position:fixed" >SCHEDULE</a>
 </div>
 
 <!-- Page Container -->
