--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -19,10 +19,10 @@
 </div>
 
 <!-- Navbar on small screens -->
-<div class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium w3-large" #navDemo>
-  <a class="w3-bar-item w3-button w3-padding-large" style="position:fixed">GROUP</a>
-  <a class="w3-bar-item w3-button w3-padding-large"  style="position:fixed" (click) = "navigateChat()"><i class="fa fa-envelope"></i> CHAT</a>
-  <a class="w3-bar-item w3-button w3-padding-large"  style="position:fixed" >SCHEDULE</a>
+<div class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium w3-large" #navDemo style = "position:fixed">
+  <a class="w3-bar-item w3-button w3-padding-large" >GROUP</a>
+  <a class="w3-bar-item w3-button w3-padding-large"  (click) = "navigateChat()"><i class="fa fa-envelope"></i> CHAT</a>
+  <a class="w3-bar-item w3-button w3-padding-large" >SCHEDULE</a>
 </div>
 
 <!-- Page Container -->
