--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -16,14 +16,14 @@
     <img src='{{CurrentUser.profile_pic}}' class="w3-circle" style="height:23px;width:23px" alt="Avatar">
   </a>
  </div>
-</div>
-
-<!-- Navbar on small screens -->
-<div class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium w3-large" #navDemo style = "position:fixed">
-  <a class="w3-bar-item w3-button w3-padding-large" >GROUP</a>
+ <div class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium w3-large" #navDemo>
   <a class="w3-bar-item w3-button w3-padding-large"  (click) = "navigateChat()"><i class="fa fa-envelope"></i> CHAT</a>
   <a class="w3-bar-item w3-button w3-padding-large" >SCHEDULE</a>
 </div>
+</div>
+
+<!-- Navbar on small screens -->
+
 
 <!-- Page Container -->
 <div class="w3-container w3-content" style="max-width:1400px;margin-top:80px">    
