--- a/src/app/messenger/messenger.component.css
+++ b/src/app/messenger/messenger.component.css
@@ -55,8 +55,8 @@ margin-left: -155px;
 position: absolute;
 top: 0;
 left: 0;
-width: 290px;
-height: 484px;
+width: 95%;
+height: 95%;
 }
 
 #topmenu {
