--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -26,7 +26,7 @@ input[type="file"] {
 
 /* Modal Content */
 .modal-content {
-    background-color: #fefefe;
+    background-color: #6191f7;
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
