--- a/src/app/messenger/messenger.component.css
+++ b/src/app/messenger/messenger.component.css
@@ -41,10 +41,10 @@ color: #FFF;
 }
 
 #chatbox {
-width: 95%;
+width: 290px;
 background: #000;
 overflow: hidden;
-height: 95%;
+height: 484px;
 position: absolute;
 top: 175px;
 left: 50%;
@@ -55,13 +55,13 @@ margin-left: -155px;
 position: absolute;
 top: 0;
 left: 0;
-width: 95%;
-height: 95%;
+width: 290px;
+height: 484px;
 }
 
 #topmenu {
-height: 10%;
-width: 95%;
+height: 50px;
+width: 290px;
 text-align: center;
 padding-top: 20px;
 border-bottom: 1px solid #777;
