--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -20,7 +20,7 @@
           </div>
           
           <div class="friend" *ngFor ="let groupkey of groupKeys">
-						<img src="{{groups[groupkey].profile_pic}}">
+						<img src="{{groups[groupkey].picture}}">
 						<p>
 							<strong>{{groups[groupkey].name}}</strong>
 							<span>online</span>
