--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -17,17 +17,17 @@
 							<span>{{users[userkey].realtime}}</span>
 						</p>
 						<div class="status {{users[userkey].realtime}}"></div>
-          </div>
+          			</div>
           
-          <div class="friend" *ngFor ="let groupkey of groupKeys">
-						<img src="{{groups[groupkey].picture}}">
-						<p>
-							<strong>{{groups[groupkey].name}}</strong>
-							<span>online</span>
-						</p>
-						<div class="status online"></div>
-          </div>
-          
+					<div class="friend" *ngFor ="let groupkey of groupKeys">
+									<img src="{{groups[groupkey].picture}}">
+									<p>
+										<strong>{{groups[groupkey].name}}</strong>
+										<span>online</span>
+									</p>
+									<div class="status online"></div>
+					</div>
+					
 					<div id="search">
 						<input type="text" id="searchfield" value="Search contacts...">
 					</div>
@@ -94,7 +94,7 @@
 				</div>
 
 				<div id="sendmessage">
-					<input type="text" value="Send message...">
+					<input type="text" placeholder="Send message...">
 					<button id="send"></button>
 				</div>
 
