--- a/src/app/messenger/messenger.component.css
+++ b/src/app/messenger/messenger.component.css
@@ -173,7 +173,7 @@ color: #fff;
 }
 
 .p1 #profile {
-background: url("https://image.freepik.com/free-vector/doodle-love-icon_1034-778.jpg") 0 0 no-repeat;
+background: url("https://upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Spirit_Rover-Mars_Night_Sky.jpg/211px-Spirit_Rover-Mars_Night_Sky.jpg") 0 0 no-repeat;
 }
 
 #profile .avatar {
