--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -10,16 +10,15 @@
 
 				<div id="friends">
 
-					<div class="friend" *ngFor ="let userkey of userKeys" id  ="{{userkey}}" (click) = "chooseChatRoom(userkey, 'personal')">
-						<div *ngIf= "userkey !== currentId">
+					<div *ngFor ="let userkey of userKeys" id  ="{{userkey}}" (click) = "chooseChatRoom(userkey, 'personal')">
+						<div  class="friend" *ngIf= "userkey !== currentId">
 							<img src="{{users[userkey].profile_pic}}">
 							<p>
 								<strong>{{users[userkey].name}}</strong>
 								<span>{{users[userkey].realtime}}</span>
 							</p>
 							<div class="status {{users[userkey].realtime}}"></div>
-						</div>
-								
+						</div>		
 					</div>
           
 					<div class="friend" *ngFor ="let groupkey of groupKeys" id = "{{groupkey}}" (click) = "chooseChatRoom(groupkey, 'group')">
