--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -10,8 +10,8 @@
 
 				<div id="friends">
 
-					<div *ngFor ="let userkey of userKeys" id  ="{{userkey}}" (click) = "chooseChatRoom(userkey, 'personal')">
-						<div  class="friend" *ngIf= "userkey !== currentId">
+					<div *ngFor ="let userkey of userKeys"  (click) = "chooseChatRoom(userkey, 'personal')">
+						<div  class="friend" *ngIf= "userkey !== currentId" id  ="{{userkey}}">
 							<img src="{{users[userkey].profile_pic}}">
 							<p>
 								<strong>{{users[userkey].name}}</strong>
