--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -76,7 +76,7 @@
 				</div>
 				<div id="sendmessage">
 					<input type="text" placeholder="Send message...">
-					<button id="send"></button>
+					<button id="send"><i class = "fa fa-send"></i></button>
 				</div>
 
 			</div>
