--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -59,7 +59,7 @@
 										<img src="{{currentUser.profile_pic}}">
 										<div class="bubble">
 												{{message.data.text}}
-											<span>{{message.data.time}}</span>
+											<span>{{message.time}}</span>
 										</div>
 									</div>
 						</ng-template>
@@ -68,7 +68,7 @@
 										<img src="{{users[message.author].profile_pic}}">
 										<div class="bubble">
 												{{message.data.text}}
-											<span>{{message.data.time}}</span>
+											<span>{{message.time}}</span>
 										</div>
 									</div>
 						</ng-template>
