--- a/src/app/messenger/messenger.component.css
+++ b/src/app/messenger/messenger.component.css
@@ -604,7 +604,7 @@ h1 {
 .tooltip {
     position: relative;
 }
-.tooltip .tooltiptext {
+.tooltiptext {
     visibility: hidden;
     width: 120px;
     background-color: #555;
