--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -58,7 +58,7 @@
 								<div class="message right">
 											<img src="{{currentUser.profile_pic}}">
 											
-										<div class="bubble tooltip">
+										<div class="bubble">
 												{{message.data.text}}
 												<span >{{message.time}}</span>
 										</div>
