--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -56,6 +56,7 @@
 						</div>
 						<ng-template #displaymymessage>
 								<div class="message right">
+									<img src="{{currentUser.profile_pic}}" alt="">
 										<div class="bubble">
 												{{message.data.text}}
 										</div>
