--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -75,7 +75,7 @@
 				</div>
 				<div id="sendmessage">
 					<textarea type="text" placeholder="Send message..."></textarea>
-					<button id="send" (click) = "sendMessage(selectedChatroom.type, selectedChatroom.to)">SEND</button>
+					<button id="send" (click) = "sendMessage(selectedChatroom.type, selectedChatroom.to)">-></button>
 				</div>
 
 			</div>
